{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "39a12079-6239-4fd3-abcf-81e7468f67ac",
            "actions": [
                {
                    "name": "MouseSelect",
                    "type": "Button",
                    "id": "cd3cbed7-3a2b-472f-a641-eac5bf6399a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMovement",
                    "type": "Value",
                    "id": "17b92df3-792f-43b9-a9e5-531b91f9a177",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TabPressed",
                    "type": "Button",
                    "id": "f3a6e70e-cb0c-4599-a542-db5185980afb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6162c81e-5f7e-4f2c-bd62-ba4d5c84780a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87745b8f-4bc0-4939-9c89-757a840ae828",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8a0efcd-d7dc-419d-83d3-111fd7c3d398",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TabPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}